--- a/index.css
+++ b/index.css
@@ -3,8 +3,7 @@
   --passarmouse: rgba(87, 234, 79, 0.574);
 }
 
-body {
-  width: 100vw;
+body {  
   background: linear-gradient(to bottom, #640505, #14144a);
 }
 
@@ -34,7 +33,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgb(22, 34, 34);
-  width: 100vw;
+  width:0 auto;
   border-bottom: 10px solid black;
 }
 
@@ -55,7 +54,7 @@ body {
 /* Cartas */
 
 .cartas {
-  width: 100vw;
+  width: 0 auto;
   height: 50px;
   background-color: rgb(61, 61, 61);
   padding: 5px;
