--- a/index.css
+++ b/index.css
@@ -15,29 +15,34 @@ body {
   border: solid 5px black;
   border-radius: 20px;
   padding: 10px;
+  margin-top: 10%;
+  margin-bottom: 10%;
   /*transform: perspective(500px) rotateX(10deg) rotateY(5deg);
   transform-style: preserve-3d;*/
 }
 
 .fundoBase{
   background-image: url(./images/baseA.jpg);
+  background-repeat: repeat;
   
 }
 
 .fundoBaseB{
-  background-image: url(./images/baseB.jpeg);
+  background-image: url(./images/baseA.jpg);
 }
 
 /* Navegação */
-
-.navegacao{
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(22, 34, 34);
-  width:0 auto;
-  border-bottom: 10px solid black;
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
 
 .girarBotao, .gerarCartas{
@@ -56,14 +61,15 @@ body {
 /* Cartas */
 
 .cartas {
-  width: 0 auto;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 50px;
   background-color: rgb(61, 61, 61);
   padding: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
   border-radius: 0px 0px 20px 20px;
   box-shadow: 0px 7px 8px 0px black;
 }
