Geração de Cartas

--- a/index.css
+++ b/index.css
@@ -98,8 +98,8 @@ header{
   cursor: pointer;
 }
 
-.portao{
-  background-image: url('./images/blococimento.jpg');
+.porta{
+  background-image: url('./images/chão.jpg');
 }
 
 /* Campo de Batalha*/
