--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ header{
   z-index: 1000;
 }
 
-.girarBotao, .gerarCartas{
+.girarBotao, .gerarCartas, .gerarCartas2{
   border-radius: 20px;
   cursor: pointer;
   color: antiquewhite;
@@ -78,7 +78,7 @@ footer {
   border-radius: 200px 200px 0px 0px;
 }
 
-.deck{
+.deck, .deck2{
   background-color: #070704;
   display: flex;
   gap: 4px;
@@ -88,7 +88,7 @@ footer {
   height: 40px;
 }
 
-.gerarCartas:hover{
+.gerarCartas:hover, .gerarCartas2:hover{
   background-color:rgb(108, 8, 8) ;
 }
 
