--- a/index.css
+++ b/index.css
@@ -142,6 +142,14 @@ footer {
   background-color: #00000014;
 }
 
+.blocoEntrada{
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  cursor: pointer;
+  background-color: #930000cd;
+}
+
 
 .bloco:hover, .marAreiaI:hover, .marAreia:hover, .marAreia:hover .porta:hover, .areaDeNado:hover, .blocoDeCombate:hover, .muro:hover{
   background-color: var(--passarmouse);
