--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ header{
   z-index: 1000;
 }
 
-.girarBotao, .gerarCartas, .gerarCartas2{
+.girarBotao, .gerarCartas, .resetar{
   border-radius: 20px;
   cursor: pointer;
   color: antiquewhite;
