proibir cartas voltarem a td 0

--- a/index.css
+++ b/index.css
@@ -6,15 +6,28 @@ background: linear-gradient(to bottom, #640505, #14144a);
 }
 
 header{
-width: 100%;
-top: 0;
-left: 0;
-position: fixed;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: black;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: 60px;
+}
 
+nav{
+    margin-top: 60px;
+    height: 30;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
 }
 
 table {
