--- a/index.css
+++ b/index.css
@@ -13,13 +13,13 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: rgb(41, 41, 41);
     height: 60px;
 }
 
 nav{
     margin-top: 60px;
-    height: 30;
+    height: 50px;
     width: 100%;
     top: 0;
     left: 0;
@@ -39,18 +39,75 @@ aside {
     background-color: #000000; /* ajuste a cor de fundo conforme necessário */
   }
 
+
+.recolherStatusCartas{
+    padding-right: 4px;
+    padding: 0px;
+    padding-bottom: 1px;
+    margin-left: 95%;
+    position: absolute;
+}
+
+.recolherStatusCartas:hover,.girarBotao:hover, #reset-button:hover, .gerarCartas:hover{
+    background-color: #b60a0a;
+}
+
+.recolherStatusCartas,.girarBotao, #reset-button, .gerarCartas{
+    background-color: #640505;
+    color: white;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.girarBotao, #reset-button, .gerarCartas{
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+#reset-button{
+    margin-left: 5px;
+}
+
+
 .exibirCarta {
-    background-color: pink;
-    height: 150px;
+    display: block;
+    background-color: rgb(37, 37, 37);
+    height: 190px;
     width: 100px;
-    margin-top: 300px;
+    margin-top: 20px;
+    border-radius: 0px 0px 10px 0px;
+    align-items: center;
+    padding: 5px;
+    padding-left: 10px;
+    border: 1px solid white;
+}
+
+.textoCarta{
+    color: white;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.imagem{
+    width: 90px;
+    height: 90px;
+    display: none;
+    border-radius: 10px;
+    border: 2px solid white;
+}
+
+.imagem:hover{
+    transition: 0.4s ease-in-out;
+    scale: 1.2;
 }
 
 table {
 border-collapse: collapse;
-margin-top: 100px;
+margin-top: 110px;
 margin-bottom: 100px;
 }
+
 th, td {
 border: 1px solid black;
 width: 40px;
