--- a/index.css
+++ b/index.css
@@ -47,6 +47,8 @@ aside {
     position: absolute;
     width: 100%;
     transition: 0.5s;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .recolherStatusCartas:hover,.girarBotao:hover, #reset-button:hover, .gerarCartas:hover{
@@ -71,8 +73,8 @@ aside {
     background-color: rgb(37, 37, 37);
     height: 190px;
     width: 100px;
-    margin-top: 20px;
-    border-radius: 0px 0px 10px 0px;
+    margin-top: 30px;
+    border-radius: 0px 10px 10px 0px;
     align-items: center;
     padding: 5px;
     padding-left: 10px;
