--- a/index.css
+++ b/index.css
@@ -18,6 +18,20 @@ header{
     border-bottom: 2px solid white;
 }
 
+.turnos{
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #00004d;
+    border: 2px solid white;
+    color: white;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
+}
+
 nav{
     margin-top: 62px;
     height: 50px;
