--- a/index.css
+++ b/index.css
@@ -136,7 +136,7 @@ table {
 }
 
 th, td {
-border: 1px solid black;
+border: 1px solid rgba(0, 0, 0, 0.564);
 width: 40px;
 height: 40px;
 text-align: center;
@@ -144,9 +144,10 @@ text-align: center;
 }
 
 td:hover{
-background-color: rgba(48, 229, 48, 0.578);
-transition: 0.4s;
-cursor: pointer;
+
+    background-color: rgba(48, 229, 48, 0.578);
+    transition: 0.4s;
+    cursor: pointer;
 }
 
 .fundo, .fundo2{
