--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ header{
     height: 60px;
     border-bottom: 2px solid white;
     gap: 10px;
+    z-index: 1;
 }
 
 .turnos{
@@ -45,6 +46,7 @@ nav{
     justify-content: center;
     background-color: black;
     border-bottom: 2px solid rgb(87, 87, 87);
+    z-index: 1;
 }
 
 aside {
@@ -55,6 +57,7 @@ aside {
     width: 105px; /* ajuste a largura conforme necessário */
     background-color: #000000; /* ajuste a cor de fundo conforme necessário */
     border-right: 2px solid rgb(87, 87, 87);
+    z-index: 1;
   }
 
 
@@ -127,19 +130,26 @@ aside {
     scale: 1.2;
 }
 
-table {
+.mapa{
+    overflow: auto;
+}
+
+
+table{
     border-collapse: collapse;
     margin-top: 110px;
     margin-bottom: 100px;
     margin-left: 100px;
     border: 3px solid rgb(7, 7, 7);
+    table-layout: fixed;
+    width: 800px;
 }
 
 th, td {
-border: 1px solid rgba(0, 0, 0, 0.564);
-width: 40px;
-height: 40px;
-text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.564);
+    width: 40px;
+    height: 40px;
+    text-align: center;
 
 }
 
